    closes: #182792.
  * Changed the formatting of the link to the authors section to avoid
    confusion in the debiandoc2txt output, closes: #185985.
  * Fixed various typos, closes: #189274, #187418, #187422, #189654.
  * Removed broken link to csh.whynot on CPAN, closes: #187567.
  * Updated archive section list, closes: #187420.
  Manoj:
  * Clarify x-terminal-emulator virtual package eligibility, in an
    extention to an informative footnote.                    closes: Bug#165063
  * Add 40 points, not 20, when the window manager is compliant with "The
    Window Manager Specification Project".                   closes: Bug#167004
  * Fixed reference to the debconf URL (we can change the URL as it
    changes again, and I don't think any additional load would accrue
    since people using the old URL were redirected to auric anyway).
                                                             closes: Bug#184518
  * Inserted the word only in the package name section.      closes: Bug#184368
  * Amended the section about Prompting in maintainer scripts. Added a
    footnote (quoting from the Jargon File) to explain what "by hand"
    means in a computer context.                             closes: Bug#184507

 -- Josip Rodin <joy-packages@debian.org>  Sat, 10 May 2003 19:13:50 +0200

debian-policy (3.5.9.0) unstable; urgency=low

  Josip:
  * Added missing bits of information about Description: fields from
    the old Packaging manual,                                   closes: #172022
  * Fixed a stale reference to the "base system maintainer" to
    base-passwd maintainer,                                     closes: #174927
  * Fixed an accidental change from /usr/share/package to /usr/share/doc in
    the paragraph about not depending on /usr/share/doc/package,
                                                                closes: #174048
  * Fixed several errors reported by Guenther Palfinger, with some help from