@@ -55,19 +55,12 @@ DESC_FILES := debian-policy debian-menu-policy debian-perl-policy \
 FHS_ARCHIVE  := fhs-2.1-source.tar.gz
 FHS_HTML     := fhs-2.1.html.tar.gz
 FHS_FILES    := fhs/fhs.ps fhs/fhs.txt fhs/fhs.pdf
-FHS_BYHAND   := fhs-2.1.html.tar.gz fhs/fhs.txt
 # FSSTND_FILES := FSSTND-FAQ fsstnd-1.2.dvi.gz fsstnd-1.2.ps.gz fsstnd-1.2.txt.gz
 POLICY_FILES = $(SGML_FILES:=.sgml) $(SGML_FILES:=.txt.gz) \
 	       virtual-package-names-list.txt \
 	       upgrading-checklist.txt libc6-migration.txt version.ent \
                debconf_spec/debconf_specification.html \
                debconf_spec/debconf_specification.txt.gz
-BYHAND_FILES = $(SGML_FILES:=.txt.gz) $(SGML_FILES:=.html.tar.gz) \
-	       debconf_spec/debconf_specification.txt.gz \
-	       debconf_spec/debconf_specification.html \
-	       libc6-migration.txt virtual-package-names-list.txt \
-	       policy.ps.gz policy.pdf.gz upgrading-checklist.txt \
-	       $(FHS_BYHAND)
 
 FILES_TO_CLEAN  = debian/files debian/buildinfo  debian/substvars \
 		  debian/postinst debian/prerm \
@@ -179,11 +172,6 @@ stamp-policy:  build $(sanitycheck)
 	gzip -9f            policy.ps
 	debiandoc2latexpdf  policy.sgml
 	gzip -9f  	    policy.pdf
-	set -e; \
-	for i in	    $(BYHAND_FILES); do                          \
-	  $(install_file)   $$i		   ..		               ; \
-	  dpkg-distaddfile  -fdebian/files `basename $$i`     byhand - ; \
-	done
 	touch		    stamp-policy
 
 
